--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "TakeFlix",
+  "short_name": "TFlix",
   "name": "TakeFlix",
   "icons": [
     {
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "",
+      "src": "img.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "",
+      "src": "img.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "/pages/1",
+  "start_url": "",
   "display": "standalone",
-  "theme_color": "#fff",
-  "background_color": "#ffffff"
+  "theme_color": "#2d2d2d",
+  "background_color": "#2d2d2d"
 }
