--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
     "iframe": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
