--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "TFlix",
-  "name": "TakeFlix",
+  "name": "TakeFlix - filmes e series online gratis",
   "description": "Assista filmes e séries online com o TakeFlix",
   "icons": [
     {
